--- a/Esercizi Javascript/Girasoli animati.html
+++ b/Esercizi Javascript/Girasoli animati.html
@@ -8,7 +8,7 @@
     body {
         margin: 0;
         height: 100vh;
-        background-color: #0a0a2a; /* Sfondo scuro come nell'immagine */
+        background-color: #0a0a2a; 
         display: flex;
         justify-content: center;
         align-items: center;
