--- a/Nana.protocol/Codice.html
+++ b/Nana.protocol/Codice.html
@@ -516,7 +516,7 @@
         </div>
 
         <div class="final-fallback" id="finalFallback" aria-hidden="true">
-            <p>Porca Troia... Il cazzo di comando "ALT-F4" che avevo prerato si è rotto... Faccio cagare pure a programmare... Sappi che è colpa tua 🙄💔</p>
+            <p>Porca Troia... Il cazzo di comando "ALT-F4" che avevo preparato si è rotto... Faccio cagare pure a programmare... Sappi che è colpa tua 🙄💔</p>
         </div>
 
         <script>
